fix document list z-index bug

--- a/css/components/ui/_doc-filters.scss
+++ b/css/components/ui/_doc-filters.scss
@@ -147,7 +147,7 @@
   left: 0;
   width: 100%;
   background: $color-gray-2;
-  z-index: 1;
+  z-index: 10;
 }
 
 .c-doc-header-filters-wrapper {
